# FarmIQ_V02

./: .gitignore  .releaserc.json  .spectral.yaml  CLAUDE.md  Cloud  README-DEV.md  SETUP-COMPLETE.md  Untitled  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  temp_script.ps1  temp_write.js  verify-e2e.cmd
.agentskills/: SKILLS-INDEX.md
.agentskills/skills/: CLAUDE.md  README.md  SKILL_ROUTER.md
.github/workflows/: ci-service.yml  performance-tests.yml  quality-gates.yml  semantic-release.yml
apps/: .dockerignore  docker-compose.dev.yml  docker-compose.yml
apps/admin-web/: Dockerfile  README.md  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  updateK8smanifest.sh  vite.config.ts
apps/dashboard-web/: .env.example  .npmrc  COMPLETION_SUMMARY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  NOTIFICATIONS_IMPLEMENTATION.md  PRODUCTION_HARDENING_REPORT.md  README_IMPLEMENTATION.md  SMOKE_TEST.md  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
apps/scripts/: README-edge-cloud-sync.md  backfill-weighvision-finalized-from-edge.sh  bootstrap-edge-cloud-sync.ps1  bootstrap-edge-cloud-sync.sh
argocd/: README.md  app-of-apps.yaml
argocd/applications/: cloud-api-gateway-bff-dev.yaml  cloud-api-gateway-bff-prod.yaml  cloud-api-gateway-bff-staging.yaml
cloud-layer/: BOILERPLATE-COMPARISON.md  BUILD-TEST-REPORT.md  COMPLETE-SEED-STATUS.md  DATABASE-SEPARATION-SUMMARY.md  FEED-MODULE-IMPLEMENTATION-STATUS.md  FINAL-SEED-RESULTS.md  FINAL-SEED-STATUS.md  FINAL-SUMMARY.md  IMPLEMENTATION-STATUS.md  MIGRATE-AND-SEED-STATUS.md  MIGRATION-STEPS.md  MLOPS-EVIDENCE-REPORT.md  MLOPS-IMPLEMENTATION-SUMMARY.md  NEW-SERVICES-IMPLEMENTATION-SUMMARY.md  PHASE-09-EVIDENCE.md  PRODUCTION-MIGRATION-GUIDE.md  SEED-COMPLETE-SUMMARY.md  SEED-COMPLETION-REPORT.md  SEED-FINAL-SUMMARY.md  SEED-RESULTS.md  SEED-STATUS.md  SERVICES-COMPLETION-STATUS.md  SUMMARY.md  TEST-SUMMARY.md  VERIFICATION-COMMANDS.md  add-timeout-settings.ps1  barn_logs.txt  barn_ps.txt  bff_500.txt  check-cloud-telemetry.sql  check-idempotency.sql  check-retry-event.sql  diagnose-prisma-studio.ps1  docker-compose-phase09.yml  docker-compose.dev.yml  docker-compose.prisma.yml  docker-compose.yml  fix-npm-timeout.ps1  logs.txt  query-telemetry-test.sql  (+6 more)
cloud-layer/cloud-advanced-analytics/: Dockerfile  README.md  requirements.txt
cloud-layer/cloud-analytics-service/: Dockerfile  README.md  env.example  requirements.txt
cloud-layer/cloud-api-gateway-bff/: .env.example  .gitignore  BFF-FEED-BARN-RECORDS-IMPLEMENTATION.md  Dockerfile  openapi.yaml  package-lock.json  package.json  (+1 more)
docs/: 00-START-HERE.md  00-index.md  01-architecture.md  02-domain-multi-tenant-data-model.md  03-messaging-rabbitmq.md  04-database-design.md  06-rbac-authorization-matrix.md  07-backup-dr-plan.md  08-alerts-slos.md  DECISIONS.md  README.md  ROADMAP.md  ROUTES.md  STATUS.md  WO-004-IMPLEMENTATION-SUMMARY.md  WORKFLOW.md  anitigravity-prompt.md  codex-prompt.md  cursorAI-prompt.md  seed-audit.md  seed-constants.ts  topic-bridge.md
edge-layer/: WEIGHVISION_PROD_FIX_GUIDE_สำคัญ.md  create-test-event.sql  docker-compose.dev.yml  docker-compose.yml  retry-test.sql  shared-seed-constants.ts  test-idempotency.sql
helm/: README.md
iot-layer/: .dockerignore  .gitignore  docker-compose.yml  env.example  rtsp.env.example
iot-layer/iot-weighvision-agent/: .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
iot-layer/iot-weighvision-agent/app/: __init__.py  camera.py  config.py  events.py  exceptions.py  main.py  media_upload.py  mqtt_client.py  scale.py  session.py
iot-layer/iot-weighvision-agent/tests/: __init__.py  test_session.py
iot-layer/iot-weighvision-agent/tests/mocks/: __init__.py  mock_camera.py  mock_media_uploader.py  mock_mqtt_client.py  mock_scale.py
k8s/: backup-cronjob.yaml  external-secrets-operator.yaml
scripts/: backup-database.sh  chaos_monkey.js  detect-breaking-changes.ps1  dev-down.ps1  dev-up.ps1  scaffold-service.ps1  seed-all.ps1  seed-reset.ps1  update-service-configs.ps1  validate-openapi.ps1  validate-openapi.sh  verify-edge-to-cloud.ps1
tests/: package.json  playwright.config.ts
(+1690 files in other folders)
